traffic-management/apache-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: apache
  name: apache-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      run: apache
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: apache
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/service-meta-version: "2"
        consul.hashicorp.com/service-tags: "v2"
        consul.hashicorp.com/envoy-extra-args: '--log-level debug --disable-hot-restart'
    spec:
      serviceAccountName: apache
      containers:
      - image: docker.io/ewolff/microservice-kubernetes-demo-apache:latest
        name: apache
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
          - mountPath: /var/www/html/index.html
            name: index-file
            subPath: index.html
      volumes:
        - name: index-file
          configMap:
            name: apache-index
